k8s/postgres-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
	name: allow-backend-to-postgres
spec:
	podSelector:
		matchLabels:
			app: postgres
	ingress:
		- from:
			- podSelector:
				matchLabels:
					app: portfolio-backend
		  ports:
			- protocol: TCP
			  port: 5432
	policyTypes:
		- Ingress
